# latex-science-style

./: .gitignore  README.md  pyproject.toml
latex_utils/: common.py  entrypoint.py  vectors.py
